fixed currently wrap

--- a/src/components/Currently/Currently.css
+++ b/src/components/Currently/Currently.css
@@ -1,33 +1,33 @@
 .currently-description {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  max-width: 100%;
-  max-height: 20vh;
-  margin-top: 20px;
-  margin-bottom: 5px;
-  padding: 20px 40px;
-  box-shadow: 0 1px 5px black;
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+	overflow: visible;
+	max-width: 100%;
+	margin-top: 20px;
+	margin-bottom: 5px;
+	padding: 20px 40px;
+	box-shadow: 0 1px 5px black;
 }
 
 .currently-section-title {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  align-items: center;
-  cursor: pointer;
-  padding: 0 20px;
+	display: flex;
+	flex-flow: row;
+	justify-content: flex-start;
+	align-items: center;
+	cursor: pointer;
+	padding: 0 20px;
 }
 
 .descriptor {
-  padding: 5px 10px;
-  margin: 5px;
+	padding: 5px 10px;
+	margin: 5px;
 }
 
 @media only screen and (max-width: 768px) {
-  .currently-description {
-    max-height: 100%;
-  }
+	.currently-description {
+		max-height: 100%;
+	}
 }
